# OpenDeepSearch

./: .dockerignore  .env.example  .gitignore  =11.0.0  Dockerfile  README.md  TKG_README.md  ZEP_QUICK_REFERENCE.md  ZEP_SETUP_GUIDE.md  detailed_comparison_data.json  docker-compose.yml  flake.nix  gradio_demo.py  ground_truth.json  ground_truth_metadata.json  ods_vs_tkg.html  pyproject.toml  requirements.txt  results.md  run_tests.py  setup_tests.py  setup_zep_evaluation.bat  setup_zep_evaluation.sh  shell.nix  test_ods_temporal_integration.py  test_tkg_tool.py
docs/: temporal_kg_tool.md
evals/: autograde_df.py  compare_tkg.py  config.yaml  eval_gpt_web.py  eval_tasks.py  evaluate.py  grader_prompts.py  run_benchmarks.py  run_evaluation.py  run_ods_evaluation.py  temporal_accuracy.py
evals/datasets/: frames_test_set.csv  simple_qa_test_set.csv
evals/legacy_evals/: README.md  autograde_df.py  gpt_web_extract.py
evaluation/: analyze_batch_results.py  batch_evaluation.py  domain_evaluation.py  generate_queries.py  temporal_evaluation.py
results/: tkg_comparison_20250612_191503.json  tkg_comparison_20250612_191846.json
scripts/: add_more_test_data.py  add_strategic_test_data.py  create_test_data.py  generate_ground_truth.py  load_data.py  test_ods_temporal.py  test_temporal_simple.py
sec_filings/: queries.json
src/: test.py
src/opendeepsearch/: __init__.py  enhanced_temporal_kg_tool.py  ods_agent.py  ods_tool.py  opendeepsearch.py  prompts.py  simplified_temporal_kg_tool.py  temporal_kg_tool.py  wolfram_tool.py
temporal_evaluation/: create_all_datasets.py  run_evaluation_wrapper.py  setup_evaluation.py  test_env.py
temporal_evaluation/clinical_trials/: collect_data.py  load_dataset.py
temporal_evaluation/datasets/: clinical_trials.json  financial_data.json  sec_filings.json  supply_chain.json
temporal_evaluation/financial_data/: collect_data.py  load_dataset.py
temporal_evaluation/sec_filings/: analyze_results.py  benchmark_analysis.py  collect_data.py  collect_enhanced_dataset.py  create_clean_sec_data.py  create_rich_sec_data.py  dataset_schema.py  fix_filing_types.py  generate_queries.py  load_dataset.py  load_sec_dataset.py  populate_sample_data.py  queries.json  report_corrected.md  (+5 more)
tests/: test_prompt_examples.py  test_temporal_kg_tool.py
(+53 files in other folders)
