[project]
name = "OpenDeepSearch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Salaheddin Alzu'bi", email = "salaheddin@sentient.xyz"},
]
dependencies = ["openai>=1.65.1", "datasets>=3.3.2", "transformers>=4.49.0", "litellm>=1.61.20", "ipdb>=0.13.13", "ipykernel>=6.29.5", "loguru>=0.7.3", "langchain>=0.3.19", "torch>=2.6.0", "crawl4ai>=0.4.248", "fasttext>=0.9.3", "ipywidgets>=8.1.5", "wikipedia-api>=0.8.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
